Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100820

[REG 5.15.2-6.2.3] Wrong rendering of semi-transparent text if Text.NativeRendering is used

XMLWordPrintable

    • Windows
    • 08e2a90f9a (qt/qtdeclarative/dev) 08e2a90f9a (qt/tqtc-qtdeclarative/dev) dcb79d9521 (qt/tqtc-qtdeclarative/6.2) ffddad4ecc (qt/qtdeclarative/6.3) ffddad4ecc (qt/tqtc-qtdeclarative/6.3) 05bdfb9171 (qt/qtdeclarative/6.4)

      If some opacity is set for Text item (or its parent) and the rendering type is Text.NativeRendering, it is rendered completely transparent (see screenshot) without regard to the color of the element below it.

      Simple example:

      import QtQuick
      import QtQuick.Window
      
      Window {
          width: 640
          height: 480
          visible: true
          color: 'transparent' // important! see comment below for details 
      
          Rectangle {
              anchors.fill: parent
              color: 'blue'
      
              Text {
                  anchors.centerIn: parent
                  text: 'TEXT'
                  font.pixelSize: 218
      
                  opacity: 0.4
                  renderType: Text.NativeRendering
              }
          }
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            studiosus Vladimir Belyavsky
            Votes:
            4 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes